<resources>
    <string name="app_name">Sports Unity</string>
    <string name="facebook_app_id">192424827806141</string>
    <string name="link_of_terms_of_use">http://www.sportsunity.co/terms.html</string>
    <string name="link_of_privacy_policy">http://www.sportsunity.co/privacy-policy.html</string>
    <string name="link_of_sportsunity_co">http://www.sportsunity.co</string>
    <string name="action_settings">Settings</string>
    <string name="common_message_internet_not_available">Internet Unavailable</string>
    <string name="next">NEXT</string>
    <string name="create_group">Create Group</string>
    <string name="done">Done</string>
    <string name="allow">Allow</string>
    <string name="skip">SKIP</string>
    <string name="search_dots">Search...</string>
    <string name="splashText">Messaging app for Sports lover</string>
    <string name="welcome">Welcome to Sports Unity</string>
    <string name="terms">By continuing, you accept the Terms of Use and Privacy Policy</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_enter_otp">EnterOtp</string>
    <string name="contacts">Contacts</string>
    <string name="others">OTHERS</string>
    <string name="friends">CHATS</string>
    <string name="title_activity_enter_phone">EnterPhone</string>
    <string name="title_activity_profile_creation">ProfileCreationActivity</string>
    <string name="title_activity_select_sports">SelectSportsActivity</string>
    <string name="title_activity_chat_screen">ChatScreenActivity</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="openDrawer">openDrawer</string>
    <string name="closeDrawer">closeDrawer</string>
    <string name="title_activity_create_group">CreateGroup</string>
    <string name="contacts_empty">Your contact list is empty, please add some contacts</string>
    <string name="start_messaging">To start messaging contacts who have Sports Unity, tap on contacts and get started</string>
    <string name="start_messaging_others">To start messaging contacts who have Sports Unity, people around me and get started</string>
    <string name="btn_invite">INVITE</string>
    <string name="activeStatus">Active_status</string>
    <string name="username">name</string>
    <string name="lastMessage">lastmessage</string>
    <string name="people_around_me_text">PEOPLE AROUND ME</string>
    <string name="join_group_text">JOIN GROUP</string>
    <string name="create_group_text">CREATE GROUP</string>
    <string name="btn_resend">RESEND</string>
    <string name="edit_phone_number">EDIT PHONE NUMBER</string>
    <string name="btn_create_account">Create Account</string>
    <string name="default_status">Available</string>
    <string name="others_default_status">No Status</string>
    <string name="message_login_failed">Login failed, try again.</string>
    <string name="message_load_vcard_failed">Unable to load info, try again.</string>
    <string name="message_submit_vcard_failed">Unable to save info, try again.</string>
    <string name="message_submit_vcard_sucess">Saved successfully.</string>
    <string name="title_activity_demo">demo</string>
    <string name="title_activity_news_details">NewsDetailsActivity</string>
    <string name="title_activity_filter">FilterActivity</string>
    <string name="title_activity_tour">TourActivity</string>
    <string name="tour_score_details">Get detailed analysis and overviews of all relevant matches from your favourite teams and competitions.</string>
    <string name="tour_score_title">Score</string>
    <string name="tour_news_details">Personalized sports news from thousands of sources.</string>
    <string name="tour_news_title">News</string>
    <string name="published">published</string>
    <string name="tour_people_details">Allows you to find people who love teams, players and leagues similar to the ones you appreciate.</string>
    <string name="tour_people_title">People Around You</string>
    <string name="basketball">Basketball</string>
    <string name="cricket">Cricket</string>
    <string name="football">Football</string>
    <string name="formula_one">Formula One</string>
    <string name="tennis">Tennis</string>
    <string name="filter_by_sports">Filter by Sports</string>
    <string name="edit_sports">EDIT SPORTS</string>
    <string name="clear_all_filters">Clear All Filters</string>
    <string name="apply_filters">Next</string>
    <string name="filters">Filters</string>
    <string name="advance_filters">Advance Filters</string>
    <string name="filter_by_team">Filter By Teams</string>
    <string name="filter_by_leaugues_cups">Filter By Leagues/Cups</string>
    <string name="filter_by_players">Filter By Players</string>
    <string name="news_checkbox">Mini Card</string>
    <string name="country_code">+91</string>
    <string name="sim_not_found">Sim not found.</string>
    <string name="please_enter_valid_10_digit_numbers">Please enter a valid 10 digit number</string>
    <string name="otp_message_verification">Enter the verification number\nwe sent to\n</string>
    <string name="otp_message_sending">Sending...</string>
    <string name="otp_message_otp_sent">Otp sent.</string>
    <string name="otp_message_resending_failed">Failed in sending otp, please try again.</string>
    <string name="otp_message_wrong_expired_token">Wrong or Expired token</string>
    <string name="otp_message_invalid_number">Invalid number or Try again.</string>
    <string name="oops_try_again">oops, please try again.</string>
    <string name="profile_facebook_login_failed">Login failed</string>
    <string name="profile_facebook_login_cancelled">Login cancelled</string>
    <string name="use_fb_details">USE MY FACEBOOK DETAILS</string>
    <string name="select_your_favourite_sports">Select your favourite sports</string>
    <string name="select_atleast_one_sport_message">Select at least one sport.</string>
    <string name="keep_one_sport_selected">Keep at least one sport selected.</string>
    <string name="scores">Scores</string>
    <string name="fixture">Fixture</string>
    <string name="news">News</string>
    <string name="messages">Messages</string>
    <string name="title_activity_camera">CameraActivity</string>
    <string name="send_to">Send to</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_on_return">OnReturnActivity</string>
    <string name="singlechat_popup_block_contact">Block Contact</string>
    <string name="singlechat_popup_delete_chat">Delete Chat</string>
    <string name="singlechat_popup_view_contact">View Contact</string>
    <string name="group_message_provide_group_name">Please enter group name</string>
    <string name="group_message_try_again">Oops!!, muc please try again</string>
    <string name="pubsub_message_try_again">Oops!!,pubsub please try again</string>
    <string name="group_create_group_title">Name your group</string>
    <string name="group_hint_group_name">What is this group about?</string>
    <string name="group_title_create">Create Group</string>
    <string name="group_title_add_members">Add Members</string>
    <string name="group_title_add_group_participanats">ADD GROUP PARTICIPANTS</string>
    <string name="enter_phone_number_text">Enter Your Phone Number</string>
    <string name="enter_phone_number_text_details">Sports Unity will send a one time SMS
message to verify your mobile number.</string>
    <string name="chat_activity_username">chat_username</string>
    <string name="chat_activity_status">tap here for contact info</string>
    <string name="group_chat_receive_time">8:02 pm</string>
    <string name="group_receive_name">Andrew Scott</string>
    <string name="chat_receive_time">9:00 am</string>
    <string name="dummy_text_message">Hi There! i am using Sports Unity</string>
    <string name="chat_sent_time">2:39 PM</string>
    <string name="title_activity_user_profile">UserProfileActivity</string>
    <string name="default_audio_duration">0:00</string>
    <string name="search">Search</string>
    <string name="sent_an_image">Image</string>
    <string name="sent_a_video">Video</string>
    <string name="sent_a_sticker">Sent a Sticker</string>
    <string name="sent_an_audio">Audio</string>
    <string name="message_to_hold_button_for_video">Hold for video, Tap for photo</string>
    <string name="message_video_recoding_on">Drag out, to cancel recording</string>
    <string name="copy_text_to_clipboard">Message copied</string>
    <string name="copy_text_multiple_to_clipboard">Messages copied</string>
    <string name="title_activity_people_around_me_map">PeopleAroundMeMap</string>
    <string name="people_around_you">PEOPLE AROUND YOU</string>
    <string name="show_odds">SHOW ODDS</string>
    <string name="live">LIVE</string>
    <string name="advanced_filter">AdvancedFilterActivty</string>
    <string name="edit">Edit</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="cricket_match_detail_fragment">Cricket Match Details</string>
    <string name="enable_location_button">Enable</string>
    <string name="enable_location_text">Enable Location</string>
    <string name="turn_on_gps_text">Please go to settings and enable GPS</string>
    <string name="location_turned_off_text">Your location services are turned off.</string>
    <string name="invite_friend">Invite Friend</string>
    <string name="app_rate">Rate Us</string>
    <string name="feedback">Share Feedback</string>
    <string name="nav_edit">EDIT</string>
    <string name="no_users_nearby">We didn\'t find anyone :(</string>
    <string name="try_broadening_search_increasing_radius">Try broadening your search by increasing radius</string>
    <string name="camera_and_external_storage_permission_message">We need to access your camera and external storage to complete this action.</string>
    <string name="read_contact_permission_message">We need to access your contacts to allow you to chat with your friends.</string>
    <string name="read_sms_permission_message">We need access to your messages to auto fetch OTP.</string>
    <string name="camera_permission_message">We need to access your camera to click images</string>
    <string name="gallery_permission_message">We need to access your photo gallery to complete this action.</string>
    <string name="external_storage_permission_message">We need to access your external storage to complete this action.</string>
    <string name="audio_permission_message">We need to access your microphone to record audio.</string>
    <string name="location_permission_message">We need to access your location to find people around you.</string>
    <string name="permission_denied">Permissions were not granted.</string>
    <string name="dummy_team_1">India</string>
    <string name="current_status">Current status</string>
    <string name="fav_team">Favourite Team(s)</string>
    <string name="fav">FAVOURITE</string>
    <string name="fav_league">Favourite League(s)</string>
    <string name="fav_player">Favourite Player(s)</string>
    <string name="select_status">Select your new status</string>
    <string name="edit_caps">EDIT</string>
    <string name="edit_fav_sports">Edit Favourite</string>
    <string name="about">About</string>
    <string name="p">P</string>
    <string name="w">W</string>
    <string name="d">D</string>
    <string name="l">L</string>
    <string name="pts">Pts</string>
    <string name="nrr">NRR</string>
    <string name="pos">POS</string>
    <string name="r">R</string>
    <string name="bowlaing">BOWLING</string>
    <string name="o">O</string>
    <string name="m">M</string>
    <string name="ext">Ext</string>
    <string name="accept_friend">Accept</string>
    <string name="block_friend">block</string>
</resources>