<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/first_layout_bowling"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/gray3"
    android:paddingBottom="@dimen/horizontal_padding_very_very_small"
    android:paddingLeft="@dimen/horizontal_padding_small"
    android:paddingRight="@dimen/horizontal_padding_small"
    android:paddingTop="@dimen/horizontal_padding_very_very_small">

    <android.support.percent.PercentRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.sports.unity.common.view.CustomRobotoCondenseBoldTextView
            android:id="@+id/ll_bowling"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/bowlaing"
            android:textColor="@color/news_static"
            android:textSize="@dimen/font_size_small_medium"
            app:layout_widthPercent="40%" />

        <com.sports.unity.common.view.CustomRobotoCondenseBoldTextView
            android:id="@+id/ll_over"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/ll_bowling"
            android:gravity="right"
            android:text="@string/o"
            android:textColor="@color/news_static"
            android:textSize="@dimen/font_size_small_medium"
            app:layout_widthPercent="12%" />

        <com.sports.unity.common.view.CustomRobotoCondenseBoldTextView
            android:id="@+id/ll_mover"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/ll_over"
            android:gravity="right"
            android:text="@string/m"
            android:textColor="@color/news_static"
            android:textSize="@dimen/font_size_small_medium"

            app:layout_widthPercent="11%" />

        <com.sports.unity.common.view.CustomRobotoCondenseBoldTextView
            android:id="@+id/ll_rover"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/ll_mover"
            android:gravity="right"
            android:text="@string/r"
            android:textColor="@color/news_static"
            android:textSize="@dimen/font_size_small_medium"
            app:layout_widthPercent="14%" />

        <com.sports.unity.common.view.CustomRobotoCondenseBoldTextView
            android:id="@+id/ll_wide"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/ll_rover"
            android:gravity="right"
            android:text="@string/w"
            android:textColor="@color/news_static"
            android:textSize="@dimen/font_size_small_medium"
            app:layout_widthPercent="11%" />

        <com.sports.unity.common.view.CustomRobotoCondenseBoldTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/ll_wide"
            android:gravity="right"
            android:text="@string/ext"
            android:textColor="@color/news_static"
            android:textSize="@dimen/font_size_small_medium"
            app:layout_widthPercent="12%" />
    </android.support.percent.PercentRelativeLayout>
</LinearLayout>
