<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_720"
    tools:context="com.sports.unity.common.controller.SplashScreenActivity">

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:text="@string/welcome"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/white"
        android:textIsSelectable="false"
        android:textSize="@dimen/font_size_xxlarge" />

    <TextView
        android:id="@+id/extraText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcomeText"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="10dp"
        android:text="@string/splashText"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/dummy_button"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:layout_below="@+id/extraText"
        android:layout_marginTop="@dimen/vertical_padding_medium"
        android:layout_marginEnd="@dimen/horizontal_padding_medium"
        android:layout_marginStart="@dimen/horizontal_padding_medium"
        android:textColor="@android:color/white"
        android:background="@color/app_theme_blue"
        android:layout_gravity="center_horizontal|bottom"
        android:text="@string/btn_create_account" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/terms"
        android:layout_marginEnd="@dimen/horizontal_padding_medium"
        android:layout_marginStart="@dimen/horizontal_padding_medium"
        android:layout_below="@+id/dummy_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/vertical_padding_small"
        android:textSize="@dimen/font_size_very_small"
        android:textColor="@color/terms_and_conditions"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_above="@id/welcomeText"
        android:gravity="center"
        >
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/sports_unity_logo_height"
            android:layout_height="@dimen/sports_unity_logo_height"
            android:src="@drawable/splash_logo"
            />
    </LinearLayout>

</RelativeLayout>
