<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/chat_msg_bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="@dimen/horizontal_padding_small"
        android:layout_marginRight="@dimen/horizontal_padding_small"
        android:layout_marginTop="@dimen/vertical_padding_very_very_small"
        android:background="@drawable/chat_grey"
        android:orientation="vertical">

        <TextView
            android:id="@+id/group_sender_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:text="@string/group_receive_name"
            android:textColor="@color/group_receive_name"
            android:textSize="@dimen/font_size_very_small" />


        <TextView
            android:id="@+id/singleMessageLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:autoLink="all"
            android:text="@string/dummy_text_message"
            android:textColor="@android:color/black"
            android:textColorLink="@android:color/white"
            android:textSize="@dimen/font_size_small_large" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/singleMessageLeft"
        android:layout_marginBottom="2dp"
        >

        <TextView
            android:id="@+id/timestampLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginLeft="@dimen/horizontal_padding_medium"
            android:text="@string/group_chat_receive_time"
            android:textSize="@dimen/font_size_very_small" />

    </LinearLayout>


</LinearLayout>