<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/vertical_padding_very_very_small"
        app:cardCornerRadius="0dp"
        app:cardElevation="@dimen/toolbar_elevation">

        <LinearLayout
            android:id="@+id/sv_football_match_table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.sports.unity.common.view.CustomRobotoCondenseBoldTextView
                android:id="@+id/group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/app_theme_blue"
                android:padding="@dimen/vertical_padding_medium_small"
                android:text="Group 1"
                android:textColor="@color/textColorPrimary"
                android:textSize="@dimen/font_size_small_large" />

            <android.support.percent.PercentRelativeLayout
                android:id="@+id/pl_team_table"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/gray3"
                android:padding="@dimen/horizontal_padding_very_small">

                <android.support.percent.PercentRelativeLayout
                    android:id="@+id/ll_team_summery"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_widthPercent="29%">

                    <com.sports.unity.common.view.CustomRobotoCondenseBoldTextView
                        android:id="@+id/tv_fteam_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pos"
                        android:textColor="@color/news_static"
                        android:textSize="@dimen/font_size_small_medium" />

                    <com.sports.unity.common.view.CustomRobotoCondenseBoldTextView
                        android:id="@+id/tv_match_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/tv_fteam_name"
                        android:gravity="left"
                        android:paddingLeft="@dimen/horizontal_padding_very_small"
                        android:text="TEAM"
                        android:textColor="@color/news_static"
                        android:textSize="@dimen/font_size_small_medium" />
                </android.support.percent.PercentRelativeLayout>

                <com.sports.unity.common.view.CustomRobotoCondenseBoldTextView
                    android:id="@+id/tv_p"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/ll_team_summery"
                    android:gravity="right"
                    android:text="@string/p"
                    android:textColor="@color/news_static"
                    android:textSize="@dimen/font_size_small_medium"
                    app:layout_widthPercent="7%" />

                <com.sports.unity.common.view.CustomRobotoCondenseBoldTextView
                    android:id="@+id/tv_w"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/tv_p"
                    android:gravity="right"
                    android:text="@string/w"
                    android:textColor="@color/news_static"
                    android:textSize="@dimen/font_size_small_medium"
                    app:layout_widthPercent="12%" />

                <com.sports.unity.common.view.CustomRobotoCondenseBoldTextView
                    android:id="@+id/tv_d"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/tv_w"
                    android:gravity="right"
                    android:text="@string/d"
                    android:textColor="@color/news_static"
                    android:textSize="@dimen/font_size_small_medium"
                    app:layout_widthPercent="10%" />

                <com.sports.unity.common.view.CustomRobotoCondenseBoldTextView
                    android:id="@+id/tv_l"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/tv_d"
                    android:gravity="right"
                    android:text="@string/l"
                    android:textColor="@color/news_static"
                    android:textSize="@dimen/font_size_small_medium"
                    app:layout_widthPercent="10%" />

                <com.sports.unity.common.view.CustomRobotoCondenseBoldTextView
                    android:id="@+id/tv_pts"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/tv_l"
                    android:gravity="right"
                    android:text="@string/pts"
                    android:textColor="@color/news_static"
                    android:textSize="@dimen/font_size_small_medium"
                    app:layout_widthPercent="12%" />

                <com.sports.unity.common.view.CustomRobotoCondenseBoldTextView
                    android:id="@+id/tv_nrr"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/tv_pts"
                    android:gravity="right"
                    android:text="@string/nrr"
                    android:textColor="@color/news_static"
                    android:textSize="@dimen/font_size_small_medium"
                    app:layout_widthPercent="15%" />
            </android.support.percent.PercentRelativeLayout>


            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_staff_pick"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/gray3"
                tools:listitem="@layout/staff_pick_table_item" />

        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>